[package]
name = "asefile"
version = "0.3.1"
authors = ["Alponso <alpine.alpaca.games@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utilities for loading Aseprite files."
homepage = "https://github.com/alpine-alpaca/asefile"
repository = "https://github.com/alpine-alpaca/asefile"
readme = "README.md"
keywords = ["gamedev", "aseprite", "pixel", "2D"]
categories = ["game-development", "multimedia::images", "rendering::data-formats"]
include = [
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "src/*"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
# Enable the util module
utils = []

[dependencies]
byteorder = "1.3"
log = "0.4"
flate2 = "1.0"
bitflags = "1.2"
nohash = "0.2"
image = { version = "0.23", default-features = false }

[dev-dependencies]
rand = ">=0.7, <0.9"
rect_packer = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
