[package]
name = "asefile"
version = "0.3.8"
authors = ["alpine-alpaca <alpine.alpaca.games@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Utilities for loading Aseprite files."
homepage = "https://github.com/alpine-alpaca/asefile"
repository = "https://github.com/alpine-alpaca/asefile"
readme = "README.md"
keywords = ["gamedev", "aseprite", "pixel", "2D"]
categories = [
    "game-development",
    "multimedia::images",
    "rendering::data-formats",
]
include = ["Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE", "src/*"]


[package.metadata.docs.rs]
all-features = true

# Config for `cargo-release`, see
# https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[package.metadata.release]

[features]
default = []
# Enable the util module
utils = []

[dependencies]
bitflags = "2"
byteorder = "1.3"
flate2 = "1.0"
image = { version = ">= 0.24, < 0.26", default-features = false }
log = "0.4"
nohash = "0.2"

[dev-dependencies]
image = { version = ">= 0.24, < 0.26", default-features = false, features = ["png"] }
rand = ">=0.7, <0.9"
rect_packer = "0.2"
